ShaunakPackage/main/default/objects/Mathematical_Computation__c/Mathematical_Computation__c.object-meta.xml
<CustomObject>
    <description>An object to perform basic mathematical calculations.</description>
    <label>Calculator</label>
    <nameField>
        <displayFormat>CLC-{00000}</displayFormat>
        <label>Calculator</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>