ShaunakPackage/main/default/objects/Mathematical_Computation__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Number_1__c /  Number_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>