ShaunakPackage/main/default/objects/Mathematical_Computation__c/fields/Number_1__c.field-meta.xml
<CustomField>
    <fullName>Number_1__c</fullName>
    <label>Number 1</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>