ShaunakPackage/main/default/objects/Mathematical_Computation__c/fields/Number_2__c.field-meta.xml
<CustomField>
    <fullName>Number_2__c</fullName>
    <label>Number 2</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>