ShaunakPackage/main/default/objects/Mathematical_Computation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>Number_1__c  *  Number_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>