ShaunakPackage/main/default/objects/Mathematical_Computation__c/fields/Substract__c.field-meta.xml
<CustomField>
    <fullName>Substract__c</fullName>
    <formula>Number_1__c  -  Number_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Substract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>